# Zomato

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  config.yaml  pyproject.toml  railway.json  render.yaml  requirements.txt
backend/: README.md  data_loader.py  main.py  models.py  recommender.py  requirements.txt
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: LoadingSpinner.jsx  RestaurantCard.jsx  SearchForm.jsx
scripts/: ingest_zomato.py
src/restaurant_rec/: __init__.py  config.py
src/restaurant_rec/phase1/: __init__.py  ingest.py  schema.py  transform.py  validate.py
src/restaurant_rec/phase2/: __init__.py  catalog_loader.py  filter.py  preferences.py
src/restaurant_rec/phase3/: __init__.py  groq_client.py  recommend.py
src/restaurant_rec/phase4/: __init__.py  app.py
test_cases/: ec1.json  ec2.json  ec3.json  ec4.json  ec5.json
web/: index.html
web/static/: app.js  styles.css
